# winctrl-xplane-plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_platforms.sh  format.sh  update_readme.sh
WINCTRL.xcodeproj/: project.pbxproj
src/: main.cpp
src/desktop/: DeviceModel.swift  FMCControlView.swift  bridge.h  bridge.mm  xplane-sdk-mock.cpp
src/include/: appstate.cpp  appstate.h  config.h
src/include/products/agp/: agp-aircraft-profile.h  product-agp.cpp
src/include/products/agp/profiles/: pa28-agp-profile.cpp  pa28-agp-profile.h  rotatemd11-agp-profile.cpp  rotatemd11-agp-profile.h  toliss-agp-profile.cpp  toliss-agp-profile.h  xcrafts-ejets-agp-profile.cpp  (+5 more)
src/include/products/ecam/: ecam-aircraft-profile.h  product-ecam.cpp
src/include/products/fcu-efis/: fcu-efis-aircraft-profile.h  product-fcu-efis.cpp
src/include/products/fmc/: fmc-aircraft-profile.h  fmc-hardware-mapping.h  product-fmc.cpp  product-fmc.h
src/include/products/joystick/: product-joystick.cpp  product-joystick.h
src/include/products/nws/: product-nws.cpp
src/include/products/orion-throttle/: orion-throttle-aircraft-profile.h  product-orion-throttle.cpp  product-orion-throttle.h
src/include/products/pap3-mcp/: pap3-mcp-aircraft-profile.h  pap3-mcp-lcd-segments.h  product-pap3-mcp.cpp  product-pap3-mcp.h
src/include/products/pdc/: pdc-aircraft-profile.h  product-pdc.cpp
src/include/products/rmp/: product-rmp.cpp  product-rmp.h  rmp-aircraft-profile.h
src/include/products/tcas/: product-tcas.cpp  product-tcas.h  tcas-aircraft-profile.h
src/include/products/ursa-minor-joystick/: product-ursa-minor-joystick.cpp  product-ursa-minor-joystick.h  ursa-minor-joystick-aircraft-profile.h
src/include/products/ursa-minor-throttle/: product-ursa-minor-throttle.cpp  product-ursa-minor-throttle.h  ursa-minor-throttle-aircraft-profile.h
src/include/utils/: dataref.cpp  dataref.h  logger.hpp  plugins-menu.cpp  plugins-menu.h  power-scheme.cpp  power-scheme.h  profile-cleanup.cpp  profile-cleanup.h  xplane-bindings.cpp  xplane-bindings.h  xplane-version.hpp
src/include/utils/usbdevice/: usbcontroller.cpp  usbcontroller.h  usbcontroller_lin.cpp  usbcontroller_mac.cpp  usbcontroller_win.cpp  usbdevice.cpp  usbdevice.h  usbdevice_lin.cpp  usbdevice_mac.cpp  usbdevice_win.cpp
src/windows-stresstest/: CMakeLists.txt  build.sh  main.cpp  stress_fmc.cpp  stress_fmc.h  usbdevice_shared.cpp
src/windows-stresstest/stubs/: XPLMUtilities.h  appstate_stub.cpp
(+165 files in other folders)
